--- a/style.css
+++ b/style.css
@@ -13,37 +13,39 @@ body{
   /* background-color: #F8F8FA; */
   background-color: #111111;
 }
+
+
 header
 {
-  height: 60px;
-  /* background-color: #7030cc; */
+  height: 100px;
+  display: flex;
+  padding-right: 50px;
+  padding-left: 50px;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  gap:20px;
+}
 
-}
-header>nav
-{
-  float: right;
-  margin-right: 50px;
-  margin-top: 30px;
-}
+
 header>nav>a
 {
-
   font-size: 12px;
   font-weight: 500;
-    color: white;
+  color: white;
   padding: 0px 10px;
+}
+
+header>div:nth-child(2)
+{ 
+  flex:1;
 }
 
 header>div:nth-child(2)>img
 { 
-  margin-top: 30px;
-  margin-left: 50px;
   width: 83px;
   height: 30px;
-  } 
-
-
-
+} 
 
 /*END OF HEADER*/
 
@@ -53,8 +55,6 @@ header>div:nth-child(2)>img
   flex-wrap: wrap;
   margin: 0px;
   height: fit-content;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
   background-color:#111111;
   padding: 0px;
 }
@@ -66,21 +66,35 @@ header>div:nth-child(2)>img
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-
   margin-bottom: 0px;
   padding-bottom: 0px;
+  justify-content: center;
+  /* margin-right: 50px; */
   margin-left: 50px;
 
-justify-content: center;
-  /* margin-right: 50px; */
 }
+
+.rightsection
+{
+  flex:1;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  text-align: right;
+}
+
+.rightsection>img
+{
+  width: 461px;
+  height: 560px;
+}
+
 .leftsection>h1
 {
   color: white;
   font-size: 65px;
   width:fit-content;
- 
 }
+
 .leftsection>h4
 {
   color: #C91B28;
@@ -88,51 +102,33 @@ justify-content: center;
   width:fit-content;
  
 }
+
 .leftsection>p
 {
   color: white;
   font-size: 0.9em;
   width:85%;
   margin-top: 3px;
-  
- 
 }
+
 .leftsection>button
 {
   color:white;
   background-color: #C91B28;
   border: 1px solid #C91B28;
-
- 
   margin-top: 30px;
   width:fit-content;
   padding: 10px 30px;
   font-size: 18px;
   font-weight: 500;
 }
-.rightsection
-{
-  flex:1;
-
-  margin-left: 50px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  text-align: right;
-
-}
-.rightsection>img
-{
-  width: 461px;
-  height: 560px;
-  margin-left: 50px;
-
-}
 
 .midsection
 {
-  height: 800px;
-  position: relative;
-  margin-top: -15px;
+  /* height: fit-content; */
+  position: relative; 
+  /* margin-top: -15px; */
+
 }
 
 .bgcla
@@ -147,11 +143,12 @@ justify-content: center;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
-
-  top:100px;
+  /* margin-top:50px; */
   justify-content: center;
+  gap:20px;
+
 }
 
 .bottomftr
@@ -161,7 +158,7 @@ justify-content: center;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
- background-color: #1E1E1E;
+  background-color: #1E1E1E;
   justify-content: center;
   align-items: flex-start;
 }
@@ -173,11 +170,11 @@ justify-content: center;
   height: 300px;
   flex-wrap: wrap;
   flex-direction: column;
- background-color:#C91B28;
+  background-color:#C91B28;
   justify-content: center;
   align-items: flex-start;
-  margin-left: 25px;
-  margin-right: 25px;
+  /* margin-left: 25px;
+  margin-right: 25px; */
 }
 
 .bottomftractive h4
@@ -215,7 +212,6 @@ justify-content: center;
 {
   height:70px;
   margin-left: 50px;
-
 }
 
 .bottomftr h4
@@ -239,6 +235,16 @@ justify-content: center;
   margin-left: 50px;
 }
 
+.projectslist>.bottomftr h4
+{
+  margin-left: 0px;
+}
+
+.projectslist>.bottomftr h2
+{
+  margin-left: 0px;
+}
+
 .bottomftr p
 {
   color: #F1F1F1;
@@ -253,7 +259,6 @@ justify-content: center;
 {
   height:70px;
   margin-left: 50px;
-
 }
 
 .midboxes1
@@ -261,9 +266,8 @@ justify-content: center;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
- 
- position: absolute;
-  top:500px;
+ /* position: absolute;
+  top:500px; */
   width: 100%;
   justify-content: center;
 
@@ -277,7 +281,7 @@ justify-content: center;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
- background-color: transparent;
+  background-color: transparent;
   justify-content: center;
   align-items: center;
 
@@ -290,7 +294,7 @@ justify-content: center;
   height: 300px;
   flex-wrap: wrap;
   flex-direction: column;
- background-color:transparent;
+  background-color:transparent;
   justify-content: center;
   align-items: flex-start;
   margin-left: 25px;
@@ -324,11 +328,9 @@ justify-content: center;
 {
   color: #F1F1F1;
   font-size: 15px;
- text-align: center;
-
+  text-align: center;
   margin-left: 0px;
 
-  
 }
 .midboxes1>div:nth-child(3)>.bottomsubftr
 {
@@ -350,19 +352,16 @@ justify-content: center;
   font-size: 35px;
   font-weight: 600;
   text-align: center;
-
 }
 
 .midboxes1>div:nth-child(3)>.bottomsubftr>p
 {
   color: #F1F1F1;
   font-size: 15px;
- text-align: center;
-
+  text-align: center;
   margin-left: 0px;
-
-  
 }
+
 .midboxes1>div:nth-child(1)>h1{
   color: #C91B28;
   font-size: 80px;
@@ -395,13 +394,11 @@ justify-content: center;
 
 .leftsectionoce
 {
-
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
-
 }
 
 .leftsectionoce>h3
@@ -429,7 +426,6 @@ justify-content: center;
 
 .quitoce>div:nth-child(2)>button
 {
- 
   color:white;
   background-color: #C91B28;
   border: 1px solid #C91B28;
@@ -450,7 +446,7 @@ justify-content: center;
   justify-content: space-around;
   top:0px;
   width: 100%;
-  
+  /* margin: 0px 50px; */
   background-color: transparent;
 }
 
@@ -474,13 +470,11 @@ justify-content: center;
   padding-top: 70px;
   padding-bottom: 66px;
  
-  
 }
-
 
 .projectslist>div>.btmimgs>img
 {
-  width: 440px;
+   width: 440px;
    height: 250px;
    margin-left: 0px;
 }
@@ -490,25 +484,23 @@ justify-content: center;
   background-color: #1E1E1E;
   display: flex;
   justify-content: space-between;
-  height: 200px;
+  /* height: 200px; */
   margin: 50px 50px;
-  padding: 0px;
+  padding-bottom: 30px;
 
 }
 
 
 .footerdesc>div>.leftsectionoce
 {
-
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
   flex: 0.75;
-  
-
 }
+
 .menufooter>nav
 {
   display: flex;
@@ -517,12 +509,13 @@ justify-content: center;
   margin-top: 50px;
   margin-bottom: 50px;
 }
+
 .menufooter>nav>a
 {
 
   font-size: 12px;
   font-weight: 500;
-   color: white;
+  color: white;
   padding: 0px 10px;
 }
 
@@ -532,7 +525,7 @@ justify-content: center;
   position: relative;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   background-color: #1E1E1E;
 }
@@ -550,7 +543,6 @@ justify-content: center;
   position: absolute;
   top: 0px;
   left:0px;
-
 }
 
 .logofooter >img
@@ -559,4 +551,115 @@ justify-content: center;
   height: 30px;
   margin-top: 30px;
   margin-left: 50px;
+}
+
+@media (min-width: 360px){
+  .footermenu2
+  {
+    justify-content: flex-end;
+  }
+  .midsection
+  {
+    margin-top: 0px;
+    margin-left: 50px;
+    margin-right: 50px;
+    height: fit-content;
+  }
+
+  .midboxes
+  {
+    position: relative;
+    margin-top:50px;
+  }
+  .midboxes1
+  {
+    position: relative;
+    margin-top:50px;
+  }
+
+  html, body
+  {
+    overflow-x: hidden;
+  }
+  .projectslist>.bottomftr
+  {
+    width:330px;
+  }
+  .projectslist>div>.btmimgs
+  {
+    padding-top: 25px;
+    padding-bottom: 20px;
+  }
+  .projectslist>div>.btmimgs>img
+  {
+    width: 300px;
+    height: 150px;
+  }
+}
+   
+@media (min-width: 640px) {
+  .footermenu2
+  {
+    justify-content: center;
+  }
+  .rightsection
+  {
+    text-align: center;
+  }
+  .midsection
+  {
+    margin-top: 0px;
+    margin-left: 50px;
+    margin-right: 50px;
+    height: fit-content;
+  }
+
+  .midboxes
+  {
+    position: relative;
+    margin-top:50px;
+  }
+  .projectslist>.bottomftr
+  {
+    width:500px;
+  }
+  .projectslist>div>.btmimgs
+  {
+    padding-top: 70px;
+    padding-bottom: 66px;
+  }
+  .projectslist>div>.btmimgs>img
+  {
+    width: 450px;
+    height: 240px;
+  }
+}
+
+@media (min-width: 768px) {
+
+}
+
+@media (min-width: 1024px) {
+  .rightsection
+  {
+    text-align: right;
+  }
+  .midsection
+  {
+    margin-top: -15px;
+    margin-left: 50px;
+    margin-right: 50px;
+    height: 800px;
+  }
+
+  .midboxes
+  {
+    position: absolute;
+    top:50px;
+  }
+  .midboxes1
+  {
+    position: absolute;
+    top:400px;
+  }
 }
